--- a/frontend/allpack/catering/catering.html
+++ b/frontend/allpack/catering/catering.html
@@ -186,7 +186,7 @@
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/cateringdata/476897231_18214600720293633_4334456607636259024_n.jpg" class="menu-img w-100" alt="Classic Wedding Menu">
+                            <img src="/frontend/allpack/catering/cateringdata/1.jpg" class="menu-img w-100" alt="Classic Wedding Menu">
                            
                         </div>
                         <div class="card-body">
@@ -206,7 +206,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/menu2.jpg" class="menu-img w-100" alt="Global Flavors Menu">
+                            <img src="/frontend/allpack/catering/cateringdata/2.jpg" class="menu-img w-100" alt="Global Flavors Menu">
                             <span class="menu-badge">From $55/pp</span>
                         </div>
                         <div class="card-body">
@@ -226,7 +226,7 @@
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="menu-card">
                         <div class="position-relative">
-                            <img src="/frontend/allpack/catering/menu3.jpg" class="menu-img w-100" alt="Rustic Farmhouse Menu">
+                            <img src="/frontend/allpack/catering/cateringdata/3.jpg" class="menu-img w-100" alt="Rustic Farmhouse Menu">
                             <span class="menu-badge">From $65/pp</span>
                         </div>
                         <div class="card-body">
@@ -257,22 +257,22 @@
             <div class="row">
                 <div class="col-md-3 col-6" data-aos="fade-up">
                     <div class="gallery-img-container">
-                        <img src="/frontend/allpack/catering/gallery1.jpg" class="gallery-img" alt="Wedding buffet">
+                        <img src="/frontend/allpack/catering/cateringdata/4.jpg" class="gallery-img" alt="Wedding buffet">
                     </div>
                 </div>
                 <div class="col-md-3 col-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="gallery-img-container">
-                        <img src="/frontend/allpack/catering/gallery2.jpg" class="gallery-img" alt="Plated dinner">
+                        <img src="/frontend/allpack/catering/cateringdata/5.jpg" class="gallery-img" alt="Plated dinner">
                     </div>
                 </div>
                 <div class="col-md-3 col-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="gallery-img-container">
-                        <img src="/frontend/allpack/catering/gallery3.jpg" class="gallery-img" alt="Dessert table">
+                        <img src="/frontend/allpack/catering/cateringdata/6.png" class="gallery-img" alt="Dessert table">
                     </div>
                 </div>
                 <div class="col-md-3 col-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="gallery-img-container">
-                        <img src="/frontend/allpack/catering/gallery4.jpg" class="gallery-img" alt="Cocktail hour">
+                        <img src="/frontend/allpack/catering/cateringdata/8.png" class="gallery-img" alt="Cocktail hour">
                     </div>
                 </div>
             </div>
