--- a/test2.html
+++ b/test2.html
@@ -612,8 +612,8 @@
                 <!-- Video 1 - Local MP4 -->
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v1.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-1.jpg" alt="Wedding Buffet Service">
+                        <a href="/frontend/allpack/catering/cataringvideos/v2.mp4" data-fancybox="video-gallery" data-caption="Wedding Buffet Service">
+                            <img src="/frontend/allpack/catering/cataringvideos/im1.png" alt="Wedding Buffet Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -628,8 +628,8 @@
                 <!-- Video 2 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
-                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-2.jpg" alt="Plated Dinner Service">
+                        <a href="/frontend/allpack/catering/cataringvideos/v3.mp4" data-fancybox="video-gallery" data-caption="Plated Dinner Service">
+                            <img src="/frontend/allpack/catering/cataringvideos/im2.png" alt="Plated Dinner Service">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -644,8 +644,8 @@
                 <!-- Video 3 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="https://www.youtube.com/watch?v=9bZkp7q19f0" data-fancybox="video-gallery" data-caption="Cocktail Hour">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-3.jpg" alt="Cocktail Hour">
+                        <a href="/frontend/allpack/catering/cataringvideos/v4.mp4" data-fancybox="video-gallery" data-caption="Cocktail Hour">
+                            <img src="/frontend/allpack/catering/cataringvideos/im3.png" alt="Cocktail Hour">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -660,8 +660,8 @@
                 <!-- Video 4 - Local MP4 -->
                 <div class="col-md-4" data-aos="fade-up">
                     <div class="video-thumbnail">
-                        <a href="/frontend/allpack/catering/cataringvideos/v2.mp4" data-fancybox="video-gallery" data-caption="Dessert Presentation">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-4.jpg" alt="Dessert Presentation">
+                        <a href="/frontend/allpack/catering/cataringvideos/v5.mp4" data-fancybox="video-gallery" data-caption="Dessert Presentation">
+                            <img src="/frontend/allpack/catering/cataringvideos/im4.png" alt="Dessert Presentation">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -676,8 +676,8 @@
                 <!-- Video 5 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="video-thumbnail">
-                        <a href="https://www.youtube.com/watch?v=JGwWNGJdvx8" data-fancybox="video-gallery" data-caption="Chef's Special">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-5.jpg" alt="Chef's Special">
+                        <a href="/frontend/allpack/catering/cataringvideos/v7.mp4" data-fancybox="video-gallery" data-caption="Chef's Special">
+                            <img src="/frontend/allpack/catering/cataringvideos/im7.png" alt="Chef's Special">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
@@ -692,8 +692,8 @@
                 <!-- Video 6 - YouTube -->
                 <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="video-thumbnail">
-                        <a href="https://www.youtube.com/watch?v=kJQP7kiw5Fk" data-fancybox="video-gallery" data-caption="Client Testimonials">
-                            <img src="/frontend/allpack/catering/cateringdata/video-thumb-6.jpg" alt="Client Testimonials">
+                        <a href="/frontend/allpack/catering/cataringvideos/v8.mp4" data-fancybox="video-gallery" data-caption="Client Testimonials">
+                            <img src="/frontend/allpack/catering/cataringvideos/im8.png" alt="Client Testimonials">
                             <div class="play-button">
                                 <i class="fas fa-play"></i>
                             </div>
