--- a/frontend/allpack/catering/catering.html
+++ b/frontend/allpack/catering/catering.html
@@ -909,7 +909,7 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section class="py-5 bg-light">
+    <section class="py-5 bg-light" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center mb-5">
@@ -977,7 +977,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section id="contact" class="py-5 bg-dark text-white">
+    <section class="py-5 bg-dark text-white">
         <div class="container py-4">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
