--- a/test2.html
+++ b/test2.html
@@ -626,6 +626,18 @@
                     </div>
                 </div>
             </div>
+            <!-- Community Dance -->
+            <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <div class="card">
+                  <a href="/frontend/allpack/indinzi/assetindinzi/gasongo.jpg" data-lightbox="dance-gallery" data-title="Community Dance - Bringing people together">
+                    <img src="/frontend/allpack/indinzi/assetindinzi/Webp.net-resizeimage(gasongo).jpg" class="card-img-top" alt="Community Dance">
+                  </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Community Dance</h5>
+                        <p class="card-text">Traditional dances that strengthen community bonds and celebrations.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -734,6 +746,7 @@
                         </div>
                     </div>
                 </div>
+               
             </div>
             </div>
       </section>
